prevent horizontal scrolling on small screens

--- a/css/dark-style.css
+++ b/css/dark-style.css
@@ -8,6 +8,9 @@ body{
   margin: 0;
   padding: 0;
 }
+img {
+  max-width: 100%;
+}
 header h1{
   margin: 0;
   font-size: 40px;
@@ -66,7 +69,7 @@ header .name {
   line-height: 110px;
   margin-left: 10px;
 }
-header span { 
+header span {
   display: inline-block;
 }
 
